<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:layoutAnimation="@anim/from_bottom_layout"
    android:orientation="vertical"
    tools:context=".ui.activity.LoginActivity"
    tools:layoutAnimation="@null">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:title="@string/setting_title">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:text="注册"
            android:id="@+id/button_register"
            android:background="@null"
            />
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginVertical="30dp"
        android:src="@drawable/logo_big_ic" />

    <LinearLayout
        android:id="@+id/ll_login_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.pandas.guardianshipassistant.ui.widget.ClearEditText
            android:id="@+id/login_account"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:hint="@string/common_phone_input_hint"
            android:inputType="textVisiblePassword"
            android:singleLine="true"
            android:text="admin"
            app:regexType="mobile" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_marginHorizontal="40dp" />

        <com.pandas.guardianshipassistant.ui.widget.PasswordEditText
            android:id="@+id/login_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/common_password_input_error"
            android:maxLength="20"
            android:text="qingpeng111"
            android:maxLines="1" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_marginHorizontal="40dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_login_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="60dp"
            android:text="@string/login_forget"
            android:textColor="@color/colorAccent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/login_text" />

    </LinearLayout>

    <View
        android:id="@+id/v_login_blank"
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_weight="5" />

    <LinearLayout
        android:id="@+id/ll_login_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            style="@style/HorizontalLineStyle"
            android:layout_width="60dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:text="@string/login_other"
            android:textColor="@color/black50" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_width="60dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.pandas.guardianshipassistant.ui.widget.ScaleImageView
            android:id="@+id/iv_login_qq"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="25dp"
            android:layout_weight="1"
            app:scaleRatio="1.2"
            app:srcCompat="@drawable/login_qq_ic" />

        <com.pandas.guardianshipassistant.ui.widget.ScaleImageView
            android:id="@+id/iv_login_wechat"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="25dp"
            android:layout_weight="1"
            app:scaleRatio="1.2"
            app:srcCompat="@drawable/login_wechat_ic" />
    </LinearLayout>

</LinearLayout>



<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".ui.activity.LoginActivity">-->
<!--    <LinearLayout-->
<!--        android:gravity="center"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        android:layout_centerInParent="true">-->

<!--        <ImageView-->
<!--            android:layout_width="110dp"-->
<!--            android:layout_height="110dp"-->
<!--            android:src="@mipmap/launcher_ic"/>-->

<!--        <LinearLayout-->
<!--            android:layout_marginTop="4dp"-->
<!--            android:layout_gravity="center_vertical"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->
<!--&lt;!&ndash;            账号&ndash;&gt;-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="账号："-->
<!--                android:textSize="35dp" />-->
<!--            <EditText-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:id="@+id/login_account"-->
<!--                android:text="admin"-->
<!--                android:hint="输入账号"/>-->
<!--        </LinearLayout>-->
<!--        <LinearLayout-->
<!--            android:layout_gravity="center_vertical"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->
<!--            &lt;!&ndash;            账号&ndash;&gt;-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="密码："-->
<!--                android:textSize="35dp" />-->
<!--            <EditText-->
<!--                android:password="true"-->
<!--                android:id="@+id/login_password"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:text="qingpeng111"-->
<!--                android:hint="输入密码"/>-->
<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:orientation="horizontal"-->
<!--            android:gravity="center">-->
<!--            <Button-->
<!--                android:layout_width="240dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:text="注册"-->
<!--                android:id="@+id/button_register"-->
<!--                android:textSize="20dp"-->
<!--                />-->
<!--            <Button-->
<!--                android:layout_width="240dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:text="登录"-->
<!--                android:id="@+id/button_login"-->
<!--                android:textSize="20dp"-->
<!--                />-->
<!--        </LinearLayout>-->

<!--    </LinearLayout>-->



<!--</RelativeLayout>-->